add box-shadow to css and image alt to html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="grid-box main-flexbox">
       <div class="grid-item grid-item-1">
         <div class="profile-box">
-          <image class="img" src="images/image-daniel.jpg"></image>
+          <image class="img" src="images/image-daniel.jpg" alt="profile image"></image>
           <div class="profile">
             <h5 class="name">Daniel Clifford</h5>
             <h6 class="profession">Verified Graduate</h6>
@@ -35,7 +35,7 @@
 
       <div class="grid-item grid-item-2">
         <div class="profile-box">
-          <image class="img" src="images/image-jonathan.jpg"></image>
+          <image class="img" src="images/image-jonathan.jpg" alt="profile image"></image>
           <div class="profile">
             <h5 class="name">Jonathan Walters</h5>
             <h6 class="profession">Verified Graduate</h6>
@@ -51,7 +51,7 @@
 
       <div class="grid-item grid-item-3">
         <div class="profile-box">
-          <image class="img" src="images/image-jeanette.jpg"></image>
+          <image class="img" src="images/image-jeanette.jpg" alt="profile image"></image>
           <div class="profile">
             <h5 class="name">Jeanette Harmon</h5>
             <h6 class="profession">Verified Graduate</h6>
@@ -67,7 +67,7 @@
 
       <div class="grid-item grid-item-4">
         <div class="profile-box">
-          <image class="img" src="images/image-patrick.jpg"></image>
+          <image class="img" src="images/image-patrick.jpg" alt="profile image"></image>
           <div class="profile">
             <h5 class="name">Patrick Abrams</h5>
             <h6 class="profession">Verified Graduate</h6>
@@ -83,7 +83,7 @@
 
       <div class="grid-item grid-item-5">
         <div class="profile-box">
-          <image class="img" src="images/image-kira.jpg"></image>
+          <image class="img" src="images/image-kira.jpg" alt="profile image"></image>
           <div class="profile">
             <h5 class="name">Kira Whittle</h5>
             <h6 class="profession">Verified Graduate</h6>
